# vague-os

./: .travis.yml  Cargo.toml  README.md
.github/: dependabot.yml
src/: main.rs  vga_buffer.rs
