[package]
authors = ["sn99"]
name = "vague-os"
version = "0.1.0"

# the profile used for cargo build
[profile.dev]
panic = "abort" # disable stack unwinding on panic

# the profile used for cargo build --release
[profile.release]
panic = "abort" # disable stack unwinding on panic

[dependencies]
bootloader_precompiled = "0.3.0"
volatile = "0.2.4"
spin = "0.4.9"

[package.metadata.bootimage]
default-target = "x86_64-vague_os.json"

[dependencies.lazy_static]
version = "1.1.0"
features = ["spin_no_std"]